<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/sender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_sender"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/last_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_message"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_send"
        android:textSize="12sp"
        android:paddingTop="4dp" />
</LinearLayout>